# QCH-VulDet

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
configs/: local_qwen35_4b_base_eval.yml  local_qwen35_4b_full_continue.yml  local_qwen35_4b_paired.yml
scripts/: prepare_dataset.py
src/: data.py  evaluate.py  experiment_config.py  loss.py  metrics.py  model_utils.py  modeling.py  prepare_primevul_hf.py  train.py  training.py  wandb_utils.py
