[project]
name = "qch-vuldet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets>=4.8.5",
    "numpy>=2.4.6",
    "peft",
    "pyyaml",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "transformers>=5.10.1",
]
