[project]
name = "qch-vuldet"
version = "0.1.0"
description = "QLoRA sequence classification for vulnerability detection"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "numpy",
    "peft",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "transformers",
    "wandb",
]
